--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Money Master</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
     <header class="my-5">
       <h1 class="text-center text-success">Money Master💰</h1>
     </header>
     <main>
-      <section class="m-5 row row-cols-2">
+      <section class="mx-5 mt-5 mb-2 row row-cols-2">
         <div>
           <img class="w-auto img-fluid rounded" src="img/calc-1.jpg" alt="" />
         </div>
@@ -21,7 +22,7 @@
           <div class="row justify-content-center my-3">
             <label class="col-2">Income:</label>
             <div class="col-6">
-              <input class="form-control" type="text" name="" id="income" />
+              <input class="input form-control" type="text" name="" id="income" />
             </div>
           </div>
 
@@ -29,19 +30,19 @@
           <div class="row justify-content-center my-3">
             <label class="col-2">Food:</label>
             <div class="col-6">
-              <input class="form-control" type="text" name="" id="food" />
+              <input class="input form-control" type="text" name="" id="food" />
             </div>
           </div>
           <div class="row justify-content-center my-3">
             <label class="col-2">Rent:</label>
             <div class="col-6">
-              <input class="form-control" type="text" name="" id="rent" />
+              <input class="input form-control" type="text" name="" id="rent" />
             </div>
           </div>
           <div class="row justify-content-center my-3">
             <label class="col-2">Clothes:</label>
             <div class="col-6">
-              <input class="form-control" type="text" name="" id="clothes" />
+              <input class="input form-control" type="text" name="" id="clothes" />
             </div>
           </div>
           <div>
